fix button spacing on listing check answers page

--- a/app/assets/stylesheets/base/_utilities.scss
+++ b/app/assets/stylesheets/base/_utilities.scss
@@ -27,6 +27,10 @@
   vertical-align: middle;
 }
 
+.align-items-center {
+  align-items: center;
+}
+
 .nobreak {
   white-space: nowrap;
 }
